dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: batteries-dashboard-ingress
  namespace: battery-core
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - batteries-dashboard.wfservices.io
    secretName: batteries-dashboard-tls
  rules:
  - host: batteries-dashboard.wfservices.io
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: batteries-api
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: batteries-dashboard-static
            port:
              number: 80
